plex-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-service
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 32400
      targetPort: 32400
      nodePort: 32400  # This must be between 30000-32767
      protocol: TCP
  selector:
    app.kubernetes.io/instance: plex
    app.kubernetes.io/name: plex
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: plex
    meta.helm.sh/release-namespace: default
  labels:
    app.kubernetes.io/instance: plex
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: plex
    app.kubernetes.io/version: 3.0.10.1567
    helm.sh/chart: plex-17.1.1
    helm.toolkit.fluxcd.io/name: plex
    helm.toolkit.fluxcd.io/namespace: default
  name: plex
  namespace: default
spec:
  ports:
  - name: http
    port: 32400
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: plex
    app.kubernetes.io/name: plex
  type: ClusterIP
